# Simple-Neural-Networks

./: README.md
Kohonen_SOM/: SOM_class.py  data_generator.py  pyproject.toml  som_use_example.ipynb
feed-forward-network_divorce/: README.txt  divorce.c  divorce.x  func.h  var.h
feed-forward-network_divorce/results/: results.xlsx
self-absorbing-map_cup/: README.txt  cup.c  cup.nb  func.h  nrutil.c  random.c
